chore: change NS

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     },
     "autoload": {
         "psr-4": {
-            "\\Ufocms\\Modules\\TCP\\": "src/Modules/TCP/",
-            "\\Ufocms\\AdminModules\\TCP\\": "src/AdminModules/TCP/"
+            "Ufocms\\Modules\\TCP\\": "src/Modules/TCP/",
+            "Ufocms\\AdminModules\\TCP\\": "src/AdminModules/TCP/"
         }
     },
     "minimum-stability": "beta",
